--- a/danke.html
+++ b/danke.html
@@ -1,1 +1,21 @@
-<br>
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Danke – HAVENIS AI</title>
+  <meta name="robots" content="noindex">
+  <style>
+    body { margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:#071026; color:#e6f0ff; display:grid; place-items:center; min-height:100vh }
+    .box { max-width:720px; padding:32px; border:1px solid rgba(255,255,255,0.08); border-radius:16px; background:rgba(255,255,255,0.04); text-align:center }
+    a { color:#00d4ff; text-decoration:none }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <h1>Danke für deine Nachricht</h1>
+    <p>Wir haben deine Übermittlung erhalten und melden uns in Kürze.</p>
+    <p><a href="/">Zurück zur Startseite</a></p>
+  </div>
+</body>
+</html>
