feat: add redirect to main website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<!DOCTYPE html>
+<!DOCTTYPE html>
 <html lang="de">
-  
-<aÀdd>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="HAVENIS AI - Innovative Loesungen">
-  <title>HAVENIS AI - Innovative Loesungawinen f√ºr AIO. Gro√üthonn und Scpulea I Veroinmen f√¥r √¶inn£∏steSpula tanzy	
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weiterleitung...</title>
+    <script>
+   #Üindow.location.replace('https://havenis-ai.github.io/havenis-ai-website/');
+    </script>
+</head>
+<body>
+    <p>Weiterleitung zur HAVENIS AI Website...</p>
+</body>
+</html>
